Fix z-index on navbar

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -113,6 +113,7 @@ img {
 
   & > .navbar-block {
     grid-area: nav;
+    z-index: 10;
   }
 
   & > .navigate-component {
